<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Report.ReportActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/AppTheme.AppBarOverlay"
            app:title="Report">

        </androidx.appcompat.widget.Toolbar>


    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/app_bar">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/heading"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="10dp"
                android:text="@string/report_heading"
                android:textSize="22sp" />

            <ImageView
                android:id="@+id/image"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:layout_below="@id/heading"
                android:layout_marginTop="10dp" />

            <TextView
                android:id="@+id/reason"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/image"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/reason"
                android:textSize="16sp"
                android:textStyle="bold" />


            <EditText
                android:id="@+id/edit_reason"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_below="@id/reason"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:gravity="top"
                android:paddingTop="10dp"
                android:autoLink="web|map|phone|email"
                android:clickable="true"
                android:fadeScrollbars="false"
                android:focusable="true"
                android:hint="Reason For Report"
                android:inputType="textMultiLine"
                android:minLines="1"
                android:background="@drawable/button_background"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:scrollbars="vertical"
                android:text=""
                android:textColor="@color/heading_color"
                android:textSize="16sp" />


            <Button
                android:id="@+id/button_report"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/edit_reason"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="15dp"
                android:background="@drawable/button_background"
                android:text="@string/report_head" />
        </RelativeLayout>

    </ScrollView>

</RelativeLayout>